--- a/src/pages/main/index.less
+++ b/src/pages/main/index.less
@@ -1,10 +1,10 @@
 
 //AppWrapper.jsx  app入口container
-.app-wrapper {
+.app-wrapper_bak {
     height: 100%;
     width: 100%;
     background: #aaa;
-    & > .app-header {
+    & > .app-header { 
       height: 100px;
       & > ul {
         & > li {
